trunk/Archive2/56/ce6239804f38be/output
main.cpp:25:15: error: no matching function for call to 'resolve'
    auto o1 = resolve<int>(overloaded);
              ^~~~~~~~~~~~
main.cpp:7:6: note: candidate function [with Sig = int] not viable: no overload of 'overloaded' matching 'int *' for 1st argument
Sig* resolve( Sig* fun_ptr ) {
     ^
main.cpp:2:6: note: candidate template ignored: couldn't infer template argument 'R'
auto resolve( R (*fun_ptr)( Args... ) ) -> R( *)( Args... ) {
     ^
1 error generated.
